--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,14 @@
 
   .card-img-top {
     height: 200px;
-    object-fit: cover;
+    object-fit: contain;
+}
+
+.card-img-bottom {
+  height: 150px; 
+  object-fit: contain; 
+  width: 100%; 
+  margin-top: 15px; 
 }
 
 
